SignIn and Registe finished

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </head>
     <body style="background-color: rgb(237, 237, 237);">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row" style="margin-top: 3vh;">
                 <div class="col-sm-4"></div>
                 <div class="col-sm-4">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="margin: 1vh; margin-top: 3vh;">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="margin: 1vh;">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img src="test.png" class="d-block w-100" style="max-height: 20vh; border-radius: 5px;">
@@ -40,7 +40,7 @@
                             <span class="visually-hidden">Next</span>
                         </button>
                     </div>
-                    <div class="login_container">
+                    <div class="white_container">
                         <form action="/action_page.php" style="margin-top: -2vh;">
                             <div class="mb-3 mt-3">
                                 <div class="input-group">
@@ -57,8 +57,8 @@
                             <button type="submit" class="btn btn-primary" style="width: 100%;">Anmelden</button>
                           </form>
                     </div>
-                    <div class="login_container">
-                        <button type="submit" class="btn btn-success" style="width: 100%;">Account erstellen</button>
+                    <div class="white_container">
+                        <button type="submit" class="btn btn-success" style="width: 100%;" onclick="window.location.href='createAccount/index.html'">Account erstellen</button>
                     </div>
                 </div>
                 <div class="col-sm-4"></div>
