--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </button>
                     </div>
                     <div class="white_container">
-                        <form action="/action_page.php" style="margin-top: -2vh;">
+                        <!--<form action="/action_page.php" style="margin-top: -2vh;">-->
                             <div class="mb-3 mt-3">
                                 <div class="input-group">
                                     <span class="input-group-text"><i class="bi bi-envelope"></i></span>
@@ -54,8 +54,8 @@
                                     <input type="password" class="form-control" id="pwd" placeholder="Passwort" name="pswd">
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary" style="width: 100%;">Anmelden</button>
-                          </form>
+                            <button type="submit" class="btn btn-primary" style="width: 100%;" onclick="window.location.href='list/index.html'">Anmelden</button>
+                        <!--</form>-->
                     </div>
                     <div class="white_container">
                         <button type="submit" class="btn btn-success" style="width: 100%;" onclick="window.location.href='createAccount/index.html'">Account erstellen</button>
