--- a/createAccount/index.html
+++ b/createAccount/index.html
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                     <div class="white_container">
-                        <form action="/action_page.php">
+                        <!--<form action="/action_page.php">-->
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="input-group createAccountInputMobile">
@@ -64,7 +64,7 @@
                             </div>
 
                             <button type="submit" class="btn btn-success" style="width: 100%;">Account erstellen</button>
-                        </form>
+                        <!--</form>-->
                     </div>
                     <div class="white_container">
                         <button type="submit" class="btn btn-primary" style="width: 100%;" onclick="window.location.href='../index.html'">Ich habe einen Account</button>
