funktionierende createAccount Seite

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                         <!--<form action="/action_page.php" style="margin-top: -2vh;">-->
                             <div class="mb-3 mt-3">
                                 <div class="input-group">
-                                    <span class="input-group-text"><i class="bi bi-envelope"></i></span>
-                                    <input type="email" class="form-control" id="email" placeholder="E-Mail" name="email">
+                                    <span class="input-group-text"><i class="bi bi-person"></i></span>
+                                    <input type="email" class="form-control" id="email" placeholder="Benutzername" name="email">
                                 </div>
                             </div>
                             <div class="mb-3">
