--- a/list/index.html
+++ b/list/index.html
@@ -20,7 +20,7 @@
     <body style="background-color: rgb(237, 237, 237);">
         <nav class="navbar bg-light navbar-light sticky-top" style="border-bottom: 1px solid grey;">
             <div class="container-fluid">
-                <button class="btn btn-success">Hinzufügen</button>
+                <button class="btn btn-success" style="font-size: 3vh;">Hinzufügen</button>
             </div>
         </nav>
 
