--- a/src/list/index.html
+++ b/src/list/index.html
@@ -18,72 +18,48 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     </head>
     <body style="background-color: rgb(237, 237, 237);">
-        <nav class="navbar bg-light navbar-light sticky-top" style="border-bottom: 1px solid grey;">
+            <nav class="navbar bg-light navbar-light sticky-top" style="border-bottom: 1px solid grey;">
+                <div class="container-fluid">
+                    <button class="btn btn-success" style="font-size: 3vh;">Hinzufügen</button>
+                </div>
+            </nav>
             <div class="container-fluid">
-                <button class="btn btn-success" style="font-size: 3vh;">Hinzufügen</button>
-            </div>
-        </nav>
-
-        <div class="white_container">
-            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-        </div>
-        <div class="white_container">
-            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-        </div>
-        <div class="white_container">
-            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-        </div>
-        <div class="white_container">
-            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-        </div>
-        <div class="white_container">
-            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-        </div>
-        <div class="white_container">
-            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-        </div>
-        <div class="white_container">
-            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-        </div>
-        <div class="white_container">
-            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-        </div>
-        <div class="white_container">
-            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-        </div>
-        <div class="white_container">
-            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-        </div>
-        <div class="white_container">
-            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-        </div>
-        <div class="white_container">
-            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-        </div>
-        <div class="white_container">
-            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-        </div>
-        <div class="white_container">
-            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-        </div>
-        <div class="white_container">
-            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-        </div>
-        <div class="white_container">
-            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-        </div>
-        <div style="height: 10vh;">
-
-        </div>
-        <!-- Grey with black text -->
-        <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-bottom" style="border-top: 1px solid grey;">
-            <div class="container-fluid" style="text-align: center; font-size: 5vh; color: black;">
-                <div class="row" style="width: 100%; margin: 0;">
-                    <div class="col"><i class="bi bi-list-ol text-primary"></i></div>
-                    <div class="col"><i class="bi bi-person-fill"></i></div>
-                    <div class="col"><i class="bi bi-plus-slash-minus"></i></div>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="white_container">
+                            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="white_container">
+                            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="white_container">
+                            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="white_container">
+                            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </nav>
+            
+            <div style="height: 10vh;">
+
+            </div>
+            <!-- Grey with black text -->
+            <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-bottom" style="border-top: 1px solid grey;">
+                <div class="container-fluid" style="text-align: center; font-size: 5vh; color: black;">
+                    <div class="row" style="width: 100%; margin: 0;">
+                        <div class="col"><i class="bi bi-list-ol text-primary"></i></div>
+                        <div class="col"><i class="bi bi-person-fill"></i></div>
+                        <div class="col"><i class="bi bi-plus-slash-minus"></i></div>
+                    </div>
+                </div>
+            </nav>
     </body>
 </html>
