--- a/src/list/index.html
+++ b/src/list/index.html
@@ -15,7 +15,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
         <!-- Bootstrap Icons -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     </head>
     <body style="background-color: rgb(237, 237, 237);">
             <nav class="navbar bg-light navbar-light sticky-top" style="border-bottom: 1px solid grey;">
@@ -26,23 +26,46 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-4">
-                        <div class="white_container">
-                            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
+                        <div class="white_container_list" data-bs-toggle="collapse" href="#collapseOne">
+                            Leonie Forstner<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
+                        </div>
+                        <div id="collapseOne" class="collapse" data-bs-parent="#accordion">
+                            <div class="white_container_collapse">
+                                <span style="color: orange;"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></span><i class="bi bi-star-fill"></i><br>
+                                <i class="bi bi-geo-alt-fill"></i> Marias Couch <br>
+                                <i class="bi bi-hearts"></i> Ficken <br>
+                                <i class="bi bi-sticky"></i> Erstes mal
+                            </div>
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="white_container">
+                        <div class="white_container_list" data-bs-toggle="collapse" href="#collapseTwo">
                             Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
+                        </div>
+                        <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
+                            <div class="white_container_collapse">
+                                Hallo
+                            </div>
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="white_container">
+                        <div class="white_container_list" data-bs-toggle="collapse" href="#collapseThree">
                             Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
+                        </div>
+                        <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
+                            <div class="white_container_collapse">
+                                Hallo
+                            </div>
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="white_container">
+                        <div class="white_container_list" data-bs-toggle="collapse" href="#collapseFour">
                             Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
+                        </div>
+                        <div id="collapseFour" class="collapse" data-bs-parent="#accordion">
+                            <div class="white_container_collapse">
+                                Hallo
+                            </div>
                         </div>
                     </div>
                 </div>
