--- a/src/list/index.html
+++ b/src/list/index.html
@@ -18,13 +18,24 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     </head>
     <body style="background-color: rgb(237, 237, 237);">
-            <nav class="navbar bg-light navbar-light sticky-top" style="border-bottom: 1px solid grey;">
+            <nav class="navbar bg-light navbar-light sticky-top">
                 <div class="container-fluid">
-                    <button class="btn btn-success" style="font-size: 3vh;">Hinzufügen</button>
+                    <button class="btn btn-success"><i class="bi bi-plus"></i></button>
+                    <form>
+                        <div class="input-group">
+                            <span class="input-group-text"><i class="bi bi-search"></i></span>
+                            <input type="text" class="form-control" placeholder="Durchsuchen..">
+                        </div>
+                    </form>
                 </div>
             </nav>
             <div class="container-fluid">
                 <div class="row">
+                    <div class="col-sm-4">
+                        <div class="white_container_list" style="background-color: #cacaca;">
+                            Du hast 4 Einträge
+                        </div>
+                    </div>
                     <div class="col-sm-4">
                         <div class="white_container_list" data-bs-toggle="collapse" href="#collapseOne">
                             Leonie Forstner<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
@@ -34,7 +45,10 @@
                                 <span style="color: orange;"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></span><i class="bi bi-star-fill"></i><br>
                                 <i class="bi bi-geo-alt-fill"></i> Marias Couch <br>
                                 <i class="bi bi-hearts"></i> Ficken <br>
-                                <i class="bi bi-sticky"></i> Erstes mal
+                                <i class="bi bi-sticky"></i> Erstes mal <br> <br>
+
+                                <button class="btn btn-secondary" onclick="window.location='edit.html'">Bearbeiten</button>
+                                <button class="btn btn-danger">Löschen</button>
                             </div>
                         </div>
                     </div>
@@ -74,15 +88,5 @@
             <div style="height: 10vh;">
 
             </div>
-            <!-- Grey with black text -->
-            <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-bottom" style="border-top: 1px solid grey;">
-                <div class="container-fluid" style="text-align: center; font-size: 5vh; color: black;">
-                    <div class="row" style="width: 100%; margin: 0;">
-                        <div class="col"><i class="bi bi-list-ol text-primary"></i></div>
-                        <div class="col"><i class="bi bi-person-fill"></i></div>
-                        <div class="col"><i class="bi bi-plus-slash-minus"></i></div>
-                    </div>
-                </div>
-            </nav>
     </body>
 </html>
