--- a/src/list/index.html
+++ b/src/list/index.html
@@ -18,74 +18,48 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     </head>
     <body style="background-color: rgb(237, 237, 237);">
-            <nav class="navbar bg-light navbar-light sticky-top">
+            <nav class="navbar bg-light navbar-light fixed-top">
                 <div class="container-fluid">
-                    <button class="btn btn-success"><i class="bi bi-plus"></i></button>
-                    <form>
-                        <div class="input-group">
-                            <span class="input-group-text"><i class="bi bi-search"></i></span>
-                            <input type="text" class="form-control" placeholder="Durchsuchen..">
-                        </div>
-                    </form>
+                    <h3 style="margin: 0;">Liste</h3>
+                    <h3 style="margin: 0;"><i class="bi bi-plus"></i></h3>
                 </div>
             </nav>
-            <div class="container-fluid">
+            <div class="container-fluid" style="margin-top: 7vh;">
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="white_container_list" style="background-color: #cacaca;">
-                            Du hast 4 Einträge
+                            Du hast 4 Einträge<span style="float: right;"><i class="bi bi-info-circle"></i></span>
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="white_container_list" data-bs-toggle="collapse" href="#collapseOne">
-                            Leonie Forstner<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
+                        <div class="white_container_list" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            Leonie Forstner<span style="float: right;"><i class="bi bi-info-circle"></i></span>
                         </div>
-                        <div id="collapseOne" class="collapse" data-bs-parent="#accordion">
-                            <div class="white_container_collapse">
-                                <span style="color: orange;"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></span><i class="bi bi-star-fill"></i><br>
-                                <i class="bi bi-geo-alt-fill"></i> Marias Couch <br>
-                                <i class="bi bi-hearts"></i> Ficken <br>
-                                <i class="bi bi-sticky"></i> Erstes mal <br> <br>
+                    </div>
 
-                                <button class="btn btn-secondary" onclick="window.location='edit.html'">Bearbeiten</button>
-                                <button class="btn btn-danger">Löschen</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="white_container_list" data-bs-toggle="collapse" href="#collapseTwo">
-                            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-                        </div>
-                        <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
-                            <div class="white_container_collapse">
-                                Hallo
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="white_container_list" data-bs-toggle="collapse" href="#collapseThree">
-                            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-                        </div>
-                        <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
-                            <div class="white_container_collapse">
-                                Hallo
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="white_container_list" data-bs-toggle="collapse" href="#collapseFour">
-                            Max Mustermann<span style="float: right;"><i class="bi bi-caret-down-fill"></i></span>
-                        </div>
-                        <div id="collapseFour" class="collapse" data-bs-parent="#accordion">
-                            <div class="white_container_collapse">
-                                Hallo
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Leonie Forstner</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <p class="modal_label">Bewertung: Sehr Schlecht
+                                    <p class="modal_label">Aktivität: Sex</p>
+                                    <p class="modal_label">Ort: Marias Couch</p>
+                                    <p class="modal_label">Notizen: Erstes Mal</p>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary">Bearbeiten</button>
+                                    <button type="button" class="btn btn-danger">Löschen</button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             
-            <div style="height: 10vh;">
 
             </div>
     </body>
