--- a/src/list/index.html
+++ b/src/list/index.html
@@ -16,14 +16,22 @@
 
         <!-- Bootstrap Icons -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+        <!-- Dynamic Modal JS -->
+        <script src="modal-with-custom-action.js"></script>
     </head>
     <body style="background-color: rgb(237, 237, 237);">
+
+
             <nav class="navbar bg-light navbar-light fixed-top">
                 <div class="container-fluid">
                     <h3 style="margin: 0;">Liste</h3>
-                    <h3 style="margin: 0;"><i class="bi bi-plus"></i></h3>
+                    <h3 class="btn_hover" style="margin: 0;" data-bs-toggle="modal" onclick="showModal('add', 0);"><i class="bi bi-plus"></i></h3>
                 </div>
             </nav>
+
             <div class="container-fluid" style="margin-top: 7vh;">
                 <div class="row">
                     <div class="col-sm-4">
@@ -32,35 +40,20 @@
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="white_container_list" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            Leonie Forstner<span style="float: right;"><i class="bi bi-info-circle"></i></span>
-                        </div>
-                    </div>
-
-                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Leonie Forstner</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <p class="modal_label">Bewertung: Sehr Schlecht
-                                    <p class="modal_label">Aktivität: Sex</p>
-                                    <p class="modal_label">Ort: Marias Couch</p>
-                                    <p class="modal_label">Notizen: Erstes Mal</p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary">Bearbeiten</button>
-                                    <button type="button" class="btn btn-danger">Löschen</button>
-                                </div>
-                            </div>
+                        <div class="white_container_list">
+                            <strong>Leonie Forstner</strong>
+                            <span style="float: right;">
+                                <i class="bi bi-pencil btn_hover" style="margin-right: 2vh;" onclick="showModal('edit', 1);"></i>
+                                <i class="bi bi-trash text-danger btn_hover" onclick="showModal('delete', 1);"></i>
+                            </span>
+                            <hr>
+                            <p style="color: orange;"><i class="bi bi-star-fill"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i></p>
+                            <p class="modal_label">Aktivität: Sex</p>
+                            <p class="modal_label">Ort: Marias Couch</p>
+                            <p class="modal_label">Notizen: Erstes Mal</p>
                         </div>
                     </div>
                 </div>
-            </div>
-            
-
             </div>
     </body>
 </html>
